# mdsite

./: .gitignore  Makefile  README.md  demo.yaml  mdsite.yaml  potage.yaml  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
demo/: mdsite.yaml  potage.yaml
docs/: index.html  mdsite.css  potage.css
docs/docs/: index.html  potage.css
mdsite/: mdsite.py
mdsite/template/: index.html  mdsite.css  pages.html  template.html
potage/: potage.py
potage/template/: index.html  pages.html  potage.css
tests/: test_mdsite.py  test_potage.py
tests/in/: index.md
tests/in/dir/: subdir.md
