[metadata]
name = potage
version = 0.1.0
url = https://github.com/iizukak/potage
project_urls =
    Documentation = https://github.com/iizukak/potage/blob/main/README.md
    Code = https://github.com/iizukak/potage
author = Kentaro Iizuka
author_email = iizuka.kentaro@gmail.com
license = Apache License 2.0
license_files = LICENSE
description = Minimal Static Site Generator.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  jinja2
  markdown

[options.extras_require]
dev = 
  pytest
  black

[options.entry_points]
console_scripts = 
    my-example-utility = potage.potage:main

[options.package_data]
potage = template/*