[metadata]
name = mdsite
version = 0.1.0
url = https://github.com/iizukak/mdsite
project_urls =
    Documentation = https://github.com/iizukak/mdsite/blob/main/README.md
    Code = https://github.com/iizukak/mdsite
author = Kentaro Iizuka
author_email = iizuka.kentaro@gmail.com
license = Apache License 2.0
license_files = LICENSE
description = Minimal Static Site Generator.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  jinja2
  markdown
  pyyaml
  pygments

[options.extras_require]
dev = 
  pytest
  black
  isort

[options.entry_points]
console_scripts = 
    mdsite = mdsite.mdsite:entrypoint

[options.package_data]
mdsite = template/*
